# raven-ai-harness

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  Cargo.toml  Makefile  README.md  TODO.md  audit.md
.github/workflows/: ci.yml
benches/: loop_bench.rs
crates/odin-audit/: Cargo.toml
crates/odin-audit/src/: lib.rs  logger.rs
crates/odin-audit/tests/: task_history_test.rs
crates/odin-baseline/: Cargo.toml
crates/odin-baseline/src/: lib.rs
crates/odin-cli/: Cargo.toml
crates/odin-cli/src/: app.rs  lib.rs  main.rs
crates/odin-core/: Cargo.toml
crates/odin-core/src/: config.rs  error.rs  lib.rs  traits.rs  types.rs
crates/odin-eval/: Cargo.toml
crates/odin-eval/src/: lib.rs
crates/odin-gateway/: Cargo.toml
crates/odin-gateway/src/: discord.rs  http.rs  lib.rs  ws.rs
crates/odin-gateway/tests/: ws_message_test.rs
crates/odin-loop/: Cargo.toml
crates/odin-loop/benches/: loop_bench.rs
crates/odin-loop/src/: confidence.rs  decomposer.rs  engine.rs  lib.rs  phases.rs  small_model.rs  summarizer.rs
crates/odin-loop/tests/: comparison_harness.rs  live_comparison.rs  skills_execution_e2e.rs  skills_integration.rs
crates/odin-mcp/: Cargo.toml
crates/odin-mcp/src/: client.rs  error.rs  lib.rs  tool_adapter.rs  transport.rs  types.rs
crates/odin-memory/: Cargo.toml
crates/odin-memory/src/: context.rs  lib.rs  models.rs  store.rs
crates/odin-orchestrator/: Cargo.toml
crates/odin-orchestrator/src/: composer.rs  control.rs  file_lock.rs  lib.rs  lifecycle.rs  merge.rs  persistence.rs  progress.rs  sub_agent.rs  task_graph.rs
crates/odin-orchestrator/tests/: integration_tests.rs
crates/odin-permissions/: Cargo.toml
crates/odin-permissions/src/: approval.rs  lib.rs  policy.rs  redact.rs  secrets.rs
crates/odin-providers/: Cargo.toml
crates/odin-providers/src/: anthropic.rs  factory.rs  fallback.rs  lib.rs  local.rs  openai_compat.rs  registry.rs  traits.rs
crates/odin-providers/tests/: fallback_e2e_test.rs
crates/odin-runtime/: Cargo.toml
crates/odin-runtime/src/: agent.rs  lib.rs  runtime.rs  session.rs
crates/odin-scheduler/: Cargo.toml
crates/odin-scheduler/src/: job.rs  lib.rs  scheduler.rs  store.rs
crates/odin-scheduler/tests/: scheduler_host_test.rs  scheduler_persistence_test.rs
crates/odin-skills/: Cargo.toml
crates/odin-skills/src/: lib.rs  skill.rs
crates/odin-tools/: Cargo.toml
crates/odin-tools/src/: catalog.rs  dry_run.rs  lib.rs  reliability.rs  sandbox.rs  tool.rs  validator.rs
crates/odin-tools/src/builtins/: data.rs  file.rs  git.rs  github.rs  mod.rs  shell.rs  system.rs  utility.rs  utility.rs.tmp  web.rs
crates/odin-tui/: Cargo.toml
crates/odin-tui/src/: app.rs  events.rs  lib.rs  runner.rs  tests.rs  ui.rs
docs/: ARCHITECTURE.md  comparison-analysis.md  hermes-compatibility.md  small-model-evals.md  tools.md
examples/: config.yaml
examples/skills/: code-review.md  git-workflow.md
scripts/: validate-tools.sh
