[package]
name = "odin-audit"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
odin-core.workspace = true
odin-permissions.workspace = true
serde.workspace = true
serde_json.workspace = true
async-trait.workspace = true
tokio.workspace = true
tracing.workspace = true
chrono.workspace = true
uuid.workspace = true
