[package]
name = "odin-baseline"
version.workspace = true
edition = "2024"
license.workspace = true

[dependencies]
odin-core.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
async-trait.workspace = true
tracing.workspace = true
chrono.workspace = true
uuid.workspace = true
