[package]
name = "odin-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "odin"
path = "src/main.rs"

[dependencies]
odin-core.workspace = true
odin-permissions = { path = "../odin-permissions" }
odin-runtime.workspace = true
odin-gateway = { workspace = true }
odin-providers.workspace = true
odin-loop.workspace = true
odin-tools.workspace = true
odin-audit.workspace = true
odin-memory.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
chrono.workspace = true
anyhow = "1"
shellexpand = "3"
