[package]
name = "odin-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
default-run = "raven"
autobins = false

[[bin]]
name = "raven"
path = "src/main.rs"

[[bin]]
name = "odin"
path = "src/bin/odin.rs"

[dependencies]
odin-core.workspace = true
odin-permissions = { path = "../odin-permissions" }
odin-runtime.workspace = true
odin-gateway = { workspace = true }
odin-providers.workspace = true
odin-loop.workspace = true
odin-orchestrator = { path = "../odin-orchestrator" }
odin-tools.workspace = true
odin-audit.workspace = true
odin-memory.workspace = true
odin-scheduler.workspace = true
odin-skills.workspace = true
odin-mcp.workspace = true
odin-tui = { path = "../odin-tui" }
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
chrono.workspace = true
anyhow = "1"
shellexpand = "3"
