[package]
name = "odin-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
thiserror.workspace = true
chrono.workspace = true
uuid.workspace = true
strum.workspace = true
strum_macros.workspace = true
tracing.workspace = true
regex.workspace = true
url.workspace = true
async-trait.workspace = true
