[package]
name = "odin-gateway"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
odin-core.workspace = true
odin-runtime.workspace = true
odin-tools.workspace = true
odin-orchestrator = { path = "../odin-orchestrator" }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
axum.workspace = true
tower-http.workspace = true
tracing.workspace = true
uuid.workspace = true
chrono.workspace = true
serenity.workspace = true
openssl.workspace = true
futures.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
