[package]
name = "odin-loop"
version.workspace = true
edition = "2024"
license.workspace = true

[dependencies]
odin-core.workspace = true
odin-permissions = { path = "../odin-permissions" }
odin-tools.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
async-trait.workspace = true
tracing.workspace = true
thiserror.workspace = true
chrono.workspace = true
uuid.workspace = true
parking_lot.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
odin-baseline = { path = "../odin-baseline" }
odin-permissions = { path = "../odin-permissions" }
rand = "0.8"
reqwest = { workspace = true }
