[package]
name = "odin-orchestrator"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license = "MIT"
description = "Multi-agent orchestrator: Composer, task graph, file locking, merge resolution"

[dependencies]
odin-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
dashmap = { workspace = true }
parking_lot = { workspace = true }
futures = { workspace = true }
sqlx = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
