[package]
name = "odin-permissions"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
odin-core.workspace = true
async-trait.workspace = true
tokio.workspace = true
tracing.workspace = true
regex.workspace = true
chrono.workspace = true
uuid.workspace = true
serde_json.workspace = true
serde.workspace = true
sha2.workspace = true
