[package]
name = "odin-providers"
version.workspace = true
edition = "2024"
license.workspace = true

[dependencies]
odin-core.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
async-trait.workspace = true
tracing.workspace = true
thiserror.workspace = true
reqwest.workspace = true
chrono.workspace = true
uuid.workspace = true
url.workspace = true
futures.workspace = true
dashmap.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
wiremock.workspace = true
