[package]
name = "odin-skills"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
odin-core.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
async-trait.workspace = true
tokio.workspace = true
tracing.workspace = true
regex.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tempfile.workspace = true
