[package]
name = "odin-tools"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
odin-core.workspace = true
serde.workspace = true
serde_json.workspace = true
async-trait.workspace = true
tokio.workspace = true
tracing.workspace = true
chrono.workspace = true
reqwest.workspace = true
regex.workspace = true
rand.workspace = true
uuid.workspace = true

[dev-dependencies]
tempfile.workspace = true
