[package]
name = "odin-tools"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
odin-core.workspace = true
serde.workspace = true
serde_json.workspace = true
async-trait.workspace = true
tokio.workspace = true
tracing.workspace = true
chrono.workspace = true
reqwest.workspace = true
regex.workspace = true
rand.workspace = true
uuid.workspace = true
rusqlite = { version = "0.32", features = ["bundled"] }

[dev-dependencies]
tempfile.workspace = true
